k8s-manifests/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hotel-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: hotel-api
  template:
    metadata:
      labels:
        app: hotel-api
    spec:
      containers:
        - name: hotel-api
          image: sidgs001/hotel-api
          ports:
            - containerPort: 8080
