k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: integration-api
  labels:
    app: integration-api
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  ports:
  - port: 8090
  selector:
    app: integration-api
